# soulogos-session

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
data/prompts/: crown_recap_prompt.txt  crown_summary_prompt.txt
scripts/: verify_recorder.py
soulogos_session/: __main__.py  bot.py  config.py  player_lookup.py  recorder.py  recorder.py.save  store.py  stt_backends.py  transcriber.py
tests/: conftest.py  test_export.py  test_hallucination_filter.py  test_merge.py  test_pause_resume.py  test_player_lookup.py  test_store.py  test_transcribe.py  test_transcriber.py
