[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soulogos-session"
version = "0.1.0"
description = "Discord voice transcription bot — records, transcribes, and stores session audio to SQLite"
requires-python = ">=3.11"
dependencies = [
    "discord.py[voice]>=2.3.0",
    "faster-whisper>=1.0.0",
    "aiosqlite>=0.19.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
soulogos-session = "soulogos_session.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["soulogos_session"]
